[FIX] Text align for csr and sustainbility

--- a/src/Components/Csr/Csr.css
+++ b/src/Components/Csr/Csr.css
@@ -1,5 +1,3 @@
-
-
 body {
   background-color: #000;
   color: #fff;
@@ -16,6 +14,7 @@ body {
   font-size: 16px;
   line-height: 144%;
   color: #FFFFFF;
+  text-align: justify;
 }
 
 .corporate-citizen {
@@ -38,7 +37,8 @@ body {
   font-style: normal;
   font-weight: normal;
   font-size: 64px;
-  line-height: 110.41%; /* identical to box height, or 71px */
+  line-height: 110.41%;
+  /* identical to box height, or 71px */
   text-align: center;
   color: #FFFFFF;
 }
